--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
