--- a/.env
+++ b/.env
@@ -5,13 +5,15 @@ JWT_REFRESH_TOKEN_TTL="7d"
 COOKIE_DOMAIN="localhost"
 
 APPLICATION_PORT=4000
+# APPLICATION_PORT=80
 APPLICATION_URL=http:/localhost:${APPLICATION_PORT}
-ALLOWED_ORIGIN="http:/localhost:3000"
+# ALLOWED_ORIGIN="http:/localhost:3000"
+ALLOWED_ORIGIN="http:/localhost:80"
 
 
 POSTGRES_USER='test'
 POSTGRES_PASSWORD='123123'
-POSTGRES_HOST='localhost'
+POSTGRES_HOST='postgres'
 POSTGRES_PORT=5433
 POSTGRES_DATABASE='myBase'
-DATABASE_URL="postgresql://test:123123@localhost:5433/myBase?schema=public"
+DATABASE_URL="postgresql://test:123123@postgres:5432/myBase?schema=public"
