--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   },
   "homepage": "https://andissun1.github.io/Sosedi/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.13.3",
     "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0"
   },
